objects/Account.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF( NOT( ISBLANK( Birth_Day__pc ) ) ,
IF( DATE( 2000 , Birth_Month__pc , Birth_Day__pc ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
YEAR (Today()) - Birth_Year__pc ,
YEAR (Today()) - Birth_Year__pc -1 ),
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <formula>CASE( Type__pc ,
&quot;PROSPECT&quot;,
IMAGE(&quot;https://parfumschristiandior--protodior--c.visualforce.com/resource/1610197603000/GraphicsPackNew/fatcow/farmfresh/32/user_orange.png&quot;,&quot;PROSPECT&quot;),
&quot;CONSUMER&quot;, IMAGE(&quot;https://parfumschristiandior--protodior--c.visualforce.com/resource/1610197603000/GraphicsPackNew/fatcow/farmfresh/32/set_security_question.png&quot;,&quot;CONSUMER&quot;),
IMAGE(&quot;https://parfumschristiandior--protodior--c.visualforce.com/resource/1610197603000/GraphicsPackNew/fatcow/farmfresh/32/user_red.png&quot;,&quot;GUEST&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>___________________</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market Tech</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pushed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pushed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Magic_Id__c</fullName>
        <label>Magic Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <description>Unique ID field for identifying Consumer whether ECO or Infoware (Stores the technicalID)</description>
        <label>Unique Id</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comarch_Id__c</fullName>
        <label>Comarch Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isDuplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDuplicate?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anonymization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anonymization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_by_CS__c</fullName>
        <formula>IF( AND(CreatedBy.Profile.Id &lt;&gt; &quot;00e09000001ULPy&quot;, CreatedBy.Profile.Id &lt;&gt; &quot;00e09000000QmbF&quot;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created by CS?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Parent_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comarch_Id_Link__c</fullName>
        <formula>HYPERLINK(&quot;https://loyalty-engine.lvmh-pc.com/backoffice/cc/accountDetails.do?id=&quot;&amp;Comarch_Id__c, Comarch_Id__c , &quot;_blank&quot;)</formula>
        <label>Comarch Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_ParentId__c</fullName>
        <label>Parent Infoware Id</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loyalty_Currency__c</fullName>
        <label>Loyalty Currency</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMP_CreatedDate__c</fullName>
        <description>CAS - Temp debug field</description>
        <formula>DATETIMEVALUE(CreatedDate)</formula>
        <label>TEMP_CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TechDataRecovery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TechDataRecovery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Black_Gold_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Black Gold Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cumulative_points__c</fullName>
        <label>Loyalty Cumulative points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_DataRecovery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TECH_DataRecovery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsExportableGlobal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsExportableGlobal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Status_picto__c</fullName>
        <formula>IF(ISPICKVAL(Loyalty_Level__pc, &quot;Platinum&quot;), IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=06809000008IGmL&amp;operationContext=CHATTER&amp;contentId=05T0900000S8gf9&quot;,&quot;Platinum&quot;),
IF(ISPICKVAL(Loyalty_Level__pc , &quot;Silver&quot;), IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=06809000008IGm5&amp;operationContext=CHATTER&amp;contentId=05T0900000S8ggM&quot;,&quot;Silver&quot;),
IF(ISPICKVAL(Loyalty_Level__pc , &quot;Gold&quot;), IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=06809000008IGmC&amp;operationContext=CHATTER&amp;contentId=05T0900000S8gea&quot;,&quot;Gold&quot;),
IF(ISPICKVAL(Loyalty_Level__pc , &quot;White&quot;), IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=06809000008IGmN&amp;operationContext=CHATTER&amp;contentId=05T0900000S8ggg&quot;,&quot;White&quot;),
IF(ISPICKVAL(Loyalty_Level__pc , &quot;Crystal&quot;), IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=06809000008IGm2&amp;operationContext=CHATTER&amp;contentId=05T0900000S8geL&quot;,&quot;Crystal&quot;),
IF(ISPICKVAL(Loyalty_Level__pc , &quot;Pearl&quot;), IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=06809000008IGmN&amp;operationContext=CHATTER&amp;contentId=05T0900000S8ggg&quot;,&quot;Pearl&quot;),
IF(ISPICKVAL(Loyalty_Level__pc , &quot;Prospect&quot;), IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=06809000008IGmM&amp;operationContext=CHATTER&amp;contentId=05T0900000S8gfY&quot;,&quot;Prospect&quot;),
IF(ISPICKVAL(Loyalty_Level__pc , &quot;Inactive&quot;), IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=06809000008IGm4&amp;operationContext=CHATTER&amp;contentId=05T0900000S8geu&quot;,&quot;Inactive&quot;),
IF(ISPICKVAL(Loyalty_Level__pc , &quot;Black Gold&quot;), IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=06809000008IGm1&amp;operationContext=CHATTER&amp;contentId=05T0900000S8fGE&quot;,&quot;Black Gold&quot;),
IF(ISPICKVAL(Loyalty_Level__pc , &quot;6&quot;), IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=06809000008IGmB&amp;operationContext=CHATTER&amp;contentId=05T0900000S8geV&quot;,&quot;6&quot;),
IF(ISPICKVAL(Loyalty_Level__pc , &quot;12&quot;), IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=06809000008IGm3&amp;operationContext=CHATTER&amp;contentId=05T0900000S8gek&quot;,&quot;12&quot;),
IF(ISPICKVAL(Loyalty_Level__pc , &quot;13&quot;), IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=06809000008IGmG&amp;operationContext=CHATTER&amp;contentId=05T0900000S8gez&quot;,&quot;13&quot;),
IF(ISPICKVAL(Loyalty_Level__pc , &quot;5&quot;), IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=06809000008IGm6&amp;operationContext=CHATTER&amp;contentId=05T0900000S8geQ&quot;,&quot;5&quot;),
IF(ISPICKVAL(Loyalty_Level__pc , &quot;0&quot;), IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=06809000008IGm4&amp;operationContext=CHATTER&amp;contentId=05T0900000S8geu&quot;,&quot;0&quot;),
IF(ISPICKVAL(Loyalty_Level__pc , &quot;8&quot;), IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=06809000008IGm6&amp;operationContext=CHATTER&amp;contentId=05T0900000S8geQ&quot;,&quot;8&quot;),

IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000MfnSAAS&quot;,&quot;Inconnu&quot;))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Infoware_Id_External__c</fullName>
        <externalId>true</externalId>
        <label>Infoware_Id_External</label>
        <length>70</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Loyalty_Sales_Amount__c</fullName>
        <label>Loyalty Sales Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loyalty_Sales_Number__c</fullName>
        <label>Loyalty Nb of Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMP_LastModifiedDate__c</fullName>
        <description>CAS - Temp Debug Field</description>
        <formula>DATETIMEVALUE( LastModifiedDate )</formula>
        <label>TEMP_LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BirthdateUSConcatenate__c</fullName>
        <formula>IF( (NOT( Birth_Year__pc=0)),
TEXT(Birth_Month__pc)&amp;&quot;/&quot;&amp; TEXT(Birth_Day__pc)&amp;&quot;/&quot;&amp; TEXT(Birth_Year__pc),
TEXT(Birth_Month__pc) &amp;&quot;/&quot;&amp; TEXT(Birth_Day__pc))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Birthdate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsExportableGlobalFormula__c</fullName>
        <formula>AND(
    NOT(ISPICKVAL(Type__pc, &apos;GUEST&apos;)),
    NOT(ISPICKVAL(Type__pc, &apos;GENERIC&apos;)),
    OR(NOT(ISBLANK(FirstName)), NOT(ISBLANK(First_Name_Kanji__pc))),
    OR(NOT(ISBLANK(LastName)), NOT(ISBLANK(Last_Name_Kanji__pc))),
    NOT(ISPICKVAL(Salutation, &quot;&quot;)),
    NOT(ISPICKVAL(Market__pc, &quot;&quot;)),
    OR(
        AND(NOT(ISBLANK(PersonEmail)), Opt_in_Email__pc),
        AND(NOT(ISBLANK(PersonMobilePhone)), Opt_in_SMS__pc),
        AND(NOT(ISBLANK(PersonMobilePhone)), Opt_in_Phone__pc),
        AND(
            NOT(ISBLANK(PersonMailingStreet)),
            NOT(ISBLANK(PersonMailingCity)),
            NOT(ISBLANK(PersonMailingPostalCode)),
            Opt_in_Mailing__pc
        ),
        Opt_in_Social_Messaging__pc
    ),
    LastModifiedBy.Username != &apos;apiuser.edifixio@pcd.com&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsExportableGlobalFormula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BypassInfowareIDGeneration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BypassInfowareIDGeneration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reprise_phones_inter_US_CA__c</fullName>
        <formula>IF(
	AND(
OR( ISPICKVAL(Market__pc, &quot;US&quot;),  ISPICKVAL(Market__pc, &quot;CA&quot;)),
OR( NOT(ISBLANK( PersonHomePhone )),   NOT(ISBLANK( PersonMobilePhone)) 
		)
		), true, false)</formula>
        <label>Reprise phones inter US/CA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consolidated_Attachment_POS__c</fullName>
        <formula>HYPERLINK( Attachment_POS__pc , Attachment_POS__pr.POS_Consolidated_ID__c &amp; &apos; - &apos; &amp; Attachment_POS__pr.App_Store_Name__c, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consolidated Attachment POS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Beauty_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Beauty Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TECH_CorrespondenceLanguage__c</fullName>
        <formula>CASE (Language__pc,&quot;DE&quot;,
      CASE(Market__pc,&quot;DE&quot;,&quot;de&quot;,
          &quot;AT&quot;,&quot;de_AT&quot;,
	  &quot;BE&quot;,&quot;de_BE&quot;,
	  &quot;CH&quot;,&quot;de_CH&quot;,
	  &quot;LU&quot;,&quot;de_LU&quot;,&quot;&quot;),
	  
	  &quot;EN&quot;,
	  CASE(Market__pc,&quot;AU&quot;,&quot;en_AU&quot;,
	  &quot;CA&quot;,&quot;en_CA&quot;,
	  &quot;GB&quot;,&quot;en_GB&quot;,
	  &quot;HK&quot;,&quot;en_HK&quot;,
	  &quot;IE&quot;,&quot;en_IE&quot;,
	   &quot;IN&quot;,&quot;en_IN&quot;,
	    &quot;MY&quot;,&quot;en_MY&quot;,
		 &quot;PH&quot;,&quot;en_PH&quot;,
		 	 &quot;SG&quot;,&quot;en_SG&quot;,
			 	 &quot;US&quot;,&quot;en_US&quot;,
				  &quot;ZA&quot;,&quot;en_ZA&quot;,&quot;&quot;),
				  
	&quot;ES&quot;,
	  CASE(Market__pc,&quot;US&quot;,&quot;es_US&quot;,
	  &quot;ES&quot;,&quot;es&quot;,&quot;&quot;),
	  
	    &quot;FR&quot;,
	  CASE(Market__pc,&quot;FR&quot;,&quot;fr&quot;,
	  &quot;BE&quot;,&quot;fr_BE&quot;,
	  &quot;CA&quot;,&quot;fr_CA&quot;,
	  &quot;CH&quot;,&quot;fr_CH&quot;,
	  &quot;LU&quot;,&quot;fr_LU&quot;,&quot;&quot;),
	  
	  	    &quot;GB&quot;,
	  CASE(Market__pc,&quot;GB&quot;,&quot;en_GB&quot;,&quot;&quot;),
	  
	 
	 &quot;IT&quot;,
	  CASE(Market__pc,&quot;CH&quot;,&quot;it_CH&quot;,
	  &quot;IT&quot;,&quot;it&quot;,&quot;&quot;),
	  
	 &quot;NL&quot;,
	  CASE(Market__pc,&quot;NL&quot;,&quot;nl_NL&quot;,
	  &quot;BE&quot;,&quot;nl_BE&quot;,&quot;&quot;),
	  
	  
	  &quot;US&quot;,
	  CASE(Market__pc,&quot;US&quot;,&quot;en_US&quot;,&quot;&quot;),
	  
	    &quot;RU&quot;,
	  CASE(Market__pc,&quot;RU&quot;,&quot;ru&quot;,
	  &quot;PL&quot;,&quot;ru_PL&quot;,&quot;&quot;),
	  
	  
	  &quot;PT&quot;,
	  CASE(Market__pc,&quot;PT&quot;,&quot;pt_PT&quot;,
	  &quot;BR&quot;,&quot;pt_BR&quot;,&quot;&quot;),
	  
	  
	  &quot;CN&quot;,
	  CASE(Market__pc,&quot;CN&quot;,&quot;zh_CN&quot;,
	  &quot;HK&quot;,&quot;zh_HK&quot;,
	  &quot;MY&quot;,&quot;zh_MY&quot;,
	    &quot;SG&quot;,&quot;zh_SG&quot;,
	    &quot;TW&quot;,&quot;zh_TW&quot;,&quot;&quot;),
          

          &quot;SE&quot;,
	  CASE(Market__pc,&quot;SE&quot;,&quot;da&quot;,&quot;&quot;),

&quot;BE&quot;,
CASE(Market__pc,&quot;BE&quot;,&quot;fr_BE&quot;,
&quot;FR&quot;,&quot;fr_BE&quot;,
&quot;DE&quot;,&quot;de_BE&quot;,
&quot;NL&quot;,&quot;nl_BE&quot;,&quot;&quot;),
		
		
	  LOWER(TEXT(Language__pc)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Correspondence Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loyalty_Points_Current_Amount__c</fullName>
        <label>Loyalty Points Current Amount</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_by_Instant_Advisory_BC__c</fullName>
        <formula>IF( CreatedBy.Profile.Name = &quot;PCD - Instant Advisory BC&quot; , true, false)</formula>
        <label>Created by Instant Advisory BC?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loyalty_Current_Level_Start_Date__c</fullName>
        <label>Loyalty Current Level Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TEMP_reprise_international_phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TEMP reprise international phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loyalty_Achieved_Challenges_Number__c</fullName>
        <label>Loyalty Achieved Challenges Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loyalty_Points_Total_Amount_This_Ye__c</fullName>
        <description>Loyalty Points Total Amount of the loyalty program related to the customer for the current year</description>
        <label>Loyalty Points Total Amount This Year</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loyalty_Sales_Amount_To_Reach_Next_Lvl__c</fullName>
        <label>Loyalty Sales Amount To Next Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loyalty_Sales_Number_To_Reach_Next_Lvl__c</fullName>
        <label>Loyalty Nb of Sales To Next Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loyalty_Sales_Amount_To_Keep_Current_Lvl__c</fullName>
        <label>Loyalty Sales Amount To Current Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loyalty_Sales_Number_To_Keep_Current_Lvl__c</fullName>
        <label>Loyalty Nb of Sales To Current Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>Business_Accounts</fullName>
        <active>true</active>
        <label>Business Accounts</label>
    </recordTypes>
    <validationRules>
        <fullName>BirthdayChangeMore2</fullName>
        <active>true</active>
        <description>If</description>
        <errorConditionFormula>AND( BirthDayChange__pc &gt;=2 ,
OR (
ISCHANGED ( Birth_Day__pc),
ISCHANGED( Birth_Month__pc),
ISCHANGED(Birth_Year__pc)
),
NOT($Profile.Name=&quot;PCD - API User&quot;),
NOT($Profile.Name=&quot;PCD - CRM Manager&quot;),
NOT($Profile.Name=&quot;PCD - Customer Service Manager Brand&quot;),
NOT($Profile.Name=&quot;PCD - Customer Service Manager Supplier&quot;),
NOT($Profile.Name=&quot;System Administrator&quot;)
)</errorConditionFormula>
        <errorMessage>Birthdate changes more than 2 times</errorMessage>
    </validationRules>
</CustomObject>